--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
 
-    
+  <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/dmlogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Deividas Mickevicius Portfolio"
+      property=”og:image”
+      content="%PUBLIC_URL%/dmlogo.png"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/dmlogo.png" />
     <!--
@@ -28,6 +28,7 @@
     -->
     <title>React App</title>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
